--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         />
         <button>Log In</button>
     </form>
-    <a href="https://nomadcoders.co" target="_blank">Go to courses</a>
+    <h1 id="greeting" class="hidden"></h1>
     <script src="app.js"></script>
 </body>
 </html>
