--- a/index.html
+++ b/index.html
@@ -11,15 +11,22 @@
         <input 
             required
             maxlength="15"
-            type="text" 
+            type="text"
+            autocomplete="off"
+            name="name"
             placeholder="What is your name?" 
         />
         <button>Log In</button>
     </form>
     <h2 id="clock">00:00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
+    <div id="quote">
+        <span></span>
+        <span></span>
+    </div>
 
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
+    <script src="js/quotes.js"></script>
 </body>
 </html>
